@@ -184,7 +184,11 @@ module Netzke
           case v["type"]
           when "string"
             res = res.where(["#{field} like ?", "%#{value}%"])
-          when "numeric", "date"
+          when "date"
+            # convert value to the DB date
+            value.match /(\d\d)\/(\d\d)\/(\d\d\d\d)/
+            res = res.where("#{field} #{op} ?", "#{$3}-#{$1}-#{$2}")
+          when "numeric"
             res = res.where(["#{field} #{op} ?", value])
           else
             res = res.where(["#{field} = ?", value])
