@@ -1,6 +1,10 @@
+= ?.?.?
+* bug fix
+  * filter on a date column
+
 = 0.7.1 - 2011-09-04
 * bug fix
-  * fixing the netzke_load endpoint when association fields are present
+  * FormPanel: fix the netzke_load endpoint when association fields are present
   * dates were not displayed in date fields, and submitting a form with date fields might result in erasing those fields
 
 * Rails 3.1 compatibility
